--- a/data/events.yml
+++ b/data/events.yml
@@ -46,7 +46,7 @@
   cost: $20 per person
   desc: '"The Smokestack Tour combines an in-depth walking tour of our facility with a guided tasting session and food pairing, focusing on the processes and personalities of our acclaimed Smokestack Series beers."'
   url:  http://www.boulevard.com/visit-us/the-smokestack-tour/
-- name: Dinnner, General Carousing & Bar Hopping
+- name: Dinner, General Carousing & Bar Hopping
   date: May 3
   time: Evening
   cost: ???
@@ -56,7 +56,7 @@
   date: May 3
   time: Evening, need minimum of 10 to reserve
   cost: $45/$55/$65
-  desc: Guests will travel through some Kansas City’s historic neighborhoods as they sample savory meats and side dishes from Kansas City’s historic and hidden gem barbecue restaurants.
+  desc: Guests will travel through some of Kansas City’s historic neighborhoods as they sample savory meats and side dishes from Kansas City’s historic and hidden gem barbecue restaurants.
   url: http://www.kcbarbecuetours.com/
 - name: Saturday Sightseeing
   date: May 7
@@ -68,7 +68,7 @@
   date: May 7
   time: Anytime, need minimum of 10 to reserve
   cost: $45/$55/$65
-  desc: Guests will travel through some Kansas City’s historic neighborhoods as they sample savory meats and side dishes from Kansas City’s historic and hidden gem barbecue restaurants.
+  desc: Guests will travel through some of Kansas City’s historic neighborhoods as they sample savory meats and side dishes from Kansas City’s historic and hidden gem barbecue restaurants.
   url: http://www.kcbarbecuetours.com/
 - name: National World War I Museum
   date: attraction
