--- a/data/events.yml
+++ b/data/events.yml
@@ -123,6 +123,13 @@
   desc: Solve puzzles to break out of a room, all in 60 minutes. You can sign up for other times on their website. If you want to coordinate with others, sign up above and I'll help arrange times.
   url: http://breakoutkc.com
 
+- name: Karaoke - Offkey
+  date: May 3
+  time: 7pm - Close
+  cost: Depends if we have enough to get a private suite
+  desc: Karaoke Bar with private suites and main bar
+  url: http://offkeykc.com/
+
 - name: Template
   date: May 0
   time: ???
