--- a/data/events.yml
+++ b/data/events.yml
@@ -124,7 +124,14 @@
   url: http://breakoutkc.com
 
 - name: Karaoke - Offkey
-  date: May 3
+  date: May 4
+  time: 7pm - Close
+  cost: Depends if we have enough to get a private suite
+  desc: Karaoke Bar with private suites and main bar
+  url: http://offkeykc.com/
+
+- name: Karaoke - Offkey
+  date: May 5
   time: 7pm - Close
   cost: Depends if we have enough to get a private suite
   desc: Karaoke Bar with private suites and main bar
