--- a/data/events.yml
+++ b/data/events.yml
@@ -144,6 +144,21 @@
   desc: Brian Cardarella of DockYard will be presenting at RailsConf and has graciously offered to present at a KC Elixir MeetUp. Brian would like to talk about Courier, an Elixir library for mail delivery on which he's been working.
   url: http://www.meetup.com/KC-Elixir-Users-Group/events/230470583/
 
+- name: Semi-Official Railsconf 5k
+  date: May 5
+  time: 7 AM (in the morning!)
+  cost: Free
+  desc: Meet in the conference hotel lobby at 7am for a job through the city.
+  url:
+
+- name: Rails Tutorial Beerware Night
+  date: May 5
+  time: 7 PM
+  cost: Free
+  desc: No Other Pub by Sporting KC - 1370 Grand Boulevard, Kansas City, MO 64106 // The Ruby on Rails Tutorial's Beerware License states that, "If we meet some day, and you think this stuff is worth it, you can buy me a beer in return." Join me, Ruby on Rails Tutorial author Michael Hartl, and other Rails Tutorial peeps for an evening of conversation, fun, and making good on the terms of the Beerware License (assuming, of course, you think this stuff was worth it).
+  url: https://www.eventbrite.com/e/rails-tutorial-beerware-night-tickets-24899445913
+
+
 - name: Template
   date: May 0
   time: ???
