--- a/data/events.yml
+++ b/data/events.yml
@@ -148,7 +148,7 @@
   date: May 6
   time: 7 AM (in the morning!)
   cost: Free
-  desc: Meet in the conference hotel lobby at 7am for a job through the city.
+  desc: Meet in the conference hotel lobby at 7am for a jog through the city.
   url:
 
 - name: Rails Tutorial Beerware Night
