Add calendar to top to make finding things easier

--- a/data/events.yml
+++ b/data/events.yml
@@ -159,10 +159,10 @@
   url: https://www.eventbrite.com/e/rails-tutorial-beerware-night-tickets-24899445913
 
 
-- name: Template
-  date: May 0
-  time: ???
-  cost: ???
-  desc:
-  url:
+# - name: Template
+#   date: May 0
+#   time: ???
+#   cost: ???
+#   desc:
+#   url:
 
