--- a/data/events.yml
+++ b/data/events.yml
@@ -123,6 +123,13 @@
   desc: Solve puzzles to break out of a room, all in 60 minutes. You can sign up for other times on their website. If you want to coordinate with others, sign up above and I'll help arrange times.
   url: http://breakoutkc.com
 
+- name: Playoff Hockey Watch Party
+  date: May 4
+  time: Evening
+  cost: Food + drinks
+  desc: Power and Light District (Specifics TBD).  Johnny's, No Other Pub, and McFadden's, and Pizza Bar are all sporty.
+  url:
+
 - name: Karaoke - Offkey
   date: Any
   time: 7pm - Close
