Add breakout room code

--- a/data/events.yml
+++ b/data/events.yml
@@ -111,16 +111,16 @@
   url: http://www.nelson-atkins.org
 
 - name: Breakout KC - Railsconf Group Event
-  date: May 2
+  date: May 3
   time: Evening
-  cost: $28 (before 15% group discount with code)
+  cost: $28 (before 15% group discount with code RailsConf2016)
   desc: "'YOU HAVE 60 MINUTES TO BREAKOUT FROM ONE OF OUR REAL LIFE ESCAPE ROOMS. CRACK THE CODES. USE YOUR GUT. SOLVE THE RIDDLES. FIND OUT IF YOU HAVE WHAT IT TAKES TO BREAKOUT IN TIME!'"
   url: http://breakoutkc.com
 
 - name: Breakout KC - Railsconf Group Event
   date: Any
   time: Any
-  cost: $28 (before 15% group discount with code)
+  cost: $28 (before 15% group discount with code RailsConf2016)
   desc: Solve puzzles to break out of a room, all in 60 minutes. You can sign up for other times on their website. If you want to coordinate with others, sign up above and I'll help arrange times.
   url: http://breakoutkc.com
 
