--- a/data/events.yml
+++ b/data/events.yml
@@ -11,12 +11,12 @@
   desc: We'll place a group order, probably. We'll have to arrange transportation.
   url: http://kansascity.royals.mlb.com/index.jsp?c_id=kc
 
-- name: BBQ for Dinner
+- name: BBQ for Dinner (Jack Stack in Freight House)
   date: May 4
   time: Evening
   cost: Food + drinks
-  desc: If you want to go out for BBQ tonight, <a href="https://clicktotweet.com/4WG3f">tweet @wesgarrison</a> and we'll coordinate.
-  url:
+  desc: 101 W 22nd St, Kansas City, MO 64108 // If you want to go out for BBQ tonight, meet at the Crowne Plaza lobby at 6:45 and we're walking to Jack Stack. They don't have reservations available, so we'll break into groups to be seated.
+  url: http://www.jackstackbbq.com/freight-house/a/freight-house/
 
 - name: Board Game Night
   date: May 4
