--- a/data/events.yml
+++ b/data/events.yml
@@ -73,12 +73,14 @@
   cost: ???
   desc: Meet up with other attendees to explore Kansas City after the conference is over
   url:
-- name: Kansas City BBQ Restaurant Tour - Saturday
+
+- name: National World War I Museum
   date: May 7
-  time: Anytime, need minimum of 10 to reserve
-  cost: $45/$55/$65
-  desc: Guests will travel through some of Kansas City’s historic neighborhoods as they sample savory meats and side dishes from Kansas City’s historic and hidden gem barbecue restaurants.
-  url: http://www.kcbarbecuetours.com/
+  time: 10am - 5pm
+  cost: $14
+  desc: The National World War I Museum and Memorial helps the nation preserve and remember the courage, honor, sacrifice and valiant efforts that led to the end of the world's first global conflict.
+  url: https://www.theworldwar.org/
+
 
 - name: National World War I Museum
   date: Any
